# summer_research_2024

./: CMakeLists.txt  package.xml
launch/: display.launch.py
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: debug_display.launch.py  display.launch.py  robot_state_publisher.launch.py  setup_assistant.launch.py
src/my_robot_description/meshes/: right_ear.stl
src/my_robot_description/scripts/: control_right_ear.py
src/my_robot_description/urdf/: expressive_robot.urdf.xacro
urdf/: expressive_robot.urdf  expressive_robot.urdf.xacro
